--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 ---
 layout: page
 title: Tu-Hoa Pham
-subtitle: Robotics & AI researcher at IBM
+subtitle: Robotics & AI researcher at NASA JPL
 use-site-title: true
 ---
 
